assets/css/style.css
/* ... */
.text {
  background:rgba(255, 255, 255, 0.904);
  font-family: mukto, sans-serif;
  font-size: 100%;
  font-weight: 200;
  width: 93%;
  margin: 8px;
  padding: 8px;
  border-radius: 5px;
}

.text-box {
  height: 125px;
  resize: none;
}

.button {
  text-align: center;
  font-size: 100%;
  padding: 15px;
  color: #ffffff;
  background-color: #6e5e51;
  border-radius: 5px;
  margin: 10px 10px;
  border: 1px solid black;
}

.button:hover {
  background-color: #625842;
}

#contact-right h2 {
  padding-bottom: 40px;
}

.contact-right {
  color: #0d1b1e;
  background-color: rgba(255, 255, 255, 0.339);
  width: 450px;
  border-radius: 10px;
  padding: 5px;
}
 
.contact-right li{
  list-style-type: none;
  font-size: 120%;
  padding-left: 15px;
  font-weight: 500;
  display: flex;
  justify-content: space-around;
}

.contact-right img{
  margin: 23%;
}

.location-map {
  display: grid;
  grid-template-columns: 1fr;
}

#location-map {
  width: 100%;
  border: 40px solid #d1cec9;
}
/*.................................... footer content */
  
.footer-grid {
  display: flex;
  flex-direction: row;
  background-color: #727778;
  min-height: 225px;
  width: auto;
  overflow: hidden;
}

.footer-grid h3 {
  text-align: center;
  color: #f2ede3;
  padding-top: 20px;
  padding-bottom: 20px;
}

.footer-grid ul li {
  list-style: none;
  display: inline-block;
  
}

.footer-left {
  flex-grow: 1;
  flex-basis: 100%;
  text-align: center;
}

.footer-left li {
  width:300px;
}

.footer-middle li {
  width:300px;
}

.footer-middle {
  flex-grow: 1;
  flex-basis: 100%;
  text-align: center;
}
  
.footer-right {
  flex-grow: 1;
  flex-basis: 100%;
  text-align: center;
}

.footer-text li{
  display: inline;
  margin: 0;
  padding: 0;
  color: #0d1b1e;  
}

#socials i {
  font-size: 300%;
  padding: 20px;
  color: #0d1b1e;
}

.footer-grid h3 i{
  color: #0d1b1e;
  font-size: 130%;
}


 /*.................................... small to medium screen sizes */
 @media screen and (max-width: 576px)
 
 {
    nav ul li {
    margin: 0.1em;
    font-size: 14px;
  }


  #navbar-logo {
    padding: 70px 0px 75px 0px;
    margin-left: auto;
    margin-right: auto;
  }

  #cover-text {
    font-size: 35px;
  }
  .grid-about,
  .services-grid,
  .grid,
  .test-grid
  {
    display: inline;
    padding: 10%;
  }  

  .contact-us {
    display: inline;
  }

  .contact-right img {
    margin: 26%;
  }
  
  .contact-left,
  .contact-right {
    width: auto;
  }

  .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5rem;

  }

  
  .grid img,
  .services-grid img {
    justify-items: center;
    width: 100%;
    height: 100%;
  }

  #progress-bar-section {
    display: grid;
    padding-bottom: 6rem;
  }

  #progress-bar-section img {
    padding-bottom: 3rem;
  }

  .progress-bar-1,
  .progress-bar-2 {
    width: auto;

  }

 .footer-grid {
  flex-direction: column;
  justify-content: center;
  
 }
 
}
 /*.................................... medium to large tablet screen sizes */
  @media screen and (max-width: 768px)
  {
  .services-grid {
    padding: 0%;
    background-color: #fff;
    column-gap: 0%;
  }
  
  .grid{
    padding: 5% 18% 0% 18%;
  }

  .grid img {
    width: 100%;
    height: 82%;
  }
  .services-grid img{
    width: 100%;
    justify-self: center;
    
  }
  .grid-about {
    display: inline;
    margin: 40px;
  }

  .grid-about img {
    width: 90%;
  }

  .test-grid{
    display:inline;

  }
  
  .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5em;
  }

  #progress-bar-section {
    display: grid;
    padding-bottom: 6rem;
  }

  #progress-bar-section img {
    padding-bottom: 3rem;
  }

  .progress-bar-1,
  .progress-bar-2 {
    width: auto;
  }
}
  
  
   @media screen and (max-width: 950px)

   {
    nav ul li {
      margin: 0.1em;
      font-size: 14px;
      padding: 10px;
    }
  .services-grid {
    padding: 0%;
    background-color: #fff;
    column-gap: 0%;
  }

  .grid img {
    width: 100%;
    height: 75%;
  }
  .services-grid img{
    width: 80%;
    justify-self: center;
    
  }
  .grid-about {
    display: inline;
    margin: 40px;
  }


  .test-grid{
    display:inline;

  }
  
  .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 10em;
  }

  #progress-bar-section {
    display: grid;
    padding-bottom: 6rem;
  }

  #progress-bar-section img {
    padding-bottom: 3rem;
  }

  .progress-bar-1,
  .progress-bar-2 {
    width: auto;
  }
   }
   /*.................................... large screen size */
  @media screen and (max-width: 1440px)

  {
    .grid-about img,
    .services-grid img,
    .grid img {
     width: 100%;
    }
    
    .test-grid{
      grid-template-columns: repeat(3,1fr);
    }
    .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5rem;
  }
  }

  @media screen and (max-width: 1920px)
  {
    .grid-about img,
    .services-grid img,
    .grid img {
     width: 100%;
    }

    .grid-about {
      grid-template-columns: repeat(2, 1fr);
    }
    
    .test-grid{
      grid-template-columns: repeat(3,1fr);
    }
    .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5rem;
  }
  }
  /*.................................... for very small screens 350px */
  
  @media screen and (max-width: 350px)
  {
  .contact-right img {
    margin: 9%;
  }
  }

